Fix issue causing horizontal scrollbar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
     font-family: var(--font-sans);
     color: var(--text-main);
     background-color: var(--color-surface);
+    overflow-x: hidden;
 }
 
 main {
@@ -18,6 +19,8 @@ main {
 .navbar {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: var(--spacing-3);
     padding: var(--spacing-4) var(--spacing-8);
 }
 
